--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^1.0.2",
     "@nestjs/typeorm": "^9.0.1",
     "cache-manager": "^5.2.3",
     "cache-manager-redis-store": "^2.0.0",
