--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@nestjs/typeorm": "^9.0.1",
     "cache-manager": "^5.2.3",
     "cache-manager-redis-store": "^2.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "compression": "^1.7.4",
     "mysql2": "^3.6.1",
     "reflect-metadata": "^0.1.13",
