--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@nestjs/cache-manager": "^2.1.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^1.0.2",
     "@nestjs/typeorm": "^9.0.1",
@@ -34,6 +36,8 @@
     "class-validator": "^0.14.0",
     "compression": "^1.7.4",
     "mysql2": "^3.6.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.17"
